# cargo-resources

./: Cargo.toml  LICENSE  README.md
src/: declarations.rs  lib.rs  main.rs  reporting.rs  resource_args.rs  resource_encoding.rs  specifications.rs
